update unit tests and include during default maven build, exclude tests in package 'manual'

--- a/src/test/resources/password/pwm/manual/TestHelper.properties
+++ b/src/test/resources/password/pwm/manual/TestHelper.properties
@@ -20,6 +20,9 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
-applicationPath=
-localDBPath=
-configurationFile=
+#applicationPath=/home/amb/dsk/t/test-appPath
+#localDBPath=/home/amb/dsk/t/test-appPath/LocalDB
+#configurationFile=/home/amb/dsk/t/test-appPath/PwmConfiguration.xml
+applicationPath=/home/amb/t/appPath
+localDBPath=/home/amb/t/appPath/LocalDB
+configurationFile=/home/amb/t/appPath/PwmConfiguration.xml
