test file reorg

--- a/.gitattributes
+++ b/.gitattributes
@@ -20,6 +20,7 @@
 *.tld           text
 *.txt           text
 *.xml           text
+*.csv           text
 
 # These files are binary and should be left untouched
 # (binary is a macro for -text -diff)
