--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
 
     <profiles>
         <profile>
+            <id>notests</id>
+            <properties>
+                <skipTests>true</skipTests>
+            </properties>
+        </profile>
+        <profile>
             <id>doclint-java8-disable</id>
             <activation>
                 <jdk>[1.8,)</jdk>
@@ -523,7 +529,7 @@
         </dependency>
         <dependency>
             <groupId>javax.xml</groupId>
-            <artifactId>jaxrpc</artifactId>
+            <artifactId>jaxrpc-api</artifactId>
             <version>1.1</version>
         </dependency>
         <dependency>
