--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -28,7 +28,8 @@ application.fileLock.waitSeconds=120
 application.wordlistRetryImportSeconds=600
 audit.events.emailFrom=Audit Event Notification <@DefaultEmailFromAddress@>
 audit.events.emailSubject=@PwmAppName@ - Audit Event - %EVENT%
-audit.syslog.message.length=1024
+audit.events.localdb.maxBulkRemovals=301
+audit.syslog.message.length=900
 audit.syslog.message.truncateMsg=[truncated]
 backup.path=backup
 backup.config.count=20
@@ -59,7 +60,7 @@ configEditor.idleTimeoutSeconds=900
 configGuide.idleTimeoutSeconds=3600
 configManager.zipDebug.maxLogLines=100000
 configManager.zipDebug.maxLogSeconds=30
-form.email.regexTest=
+form.email.regexTest=^[_+a-zA-Z0-9-]+(\\.[_a-zA-Z0-9-]+)*@[a-zA-Z0-9-]+(\\.[a-zA-Z0-9-]+)*$
 healthCheck.nominalCheckIntervalSeconds=60
 healthCheck.minimumCheckIntervalSeconds=10
 healthCheck.maximumRecordAgeSeconds=300
@@ -209,7 +210,6 @@ queue.sms.maxCount=100000
 queue.syslog.retryTimeoutMs=30000
 queue.syslog.maxAgeMs=86400000
 queue.syslog.maxCount=100000
-queue.maxCloseTimeoutMs=5000
 reporting.ldap.searchTimeoutMs=1800000
 recaptcha.clientJsUrl=//www.google.com/recaptcha/api.js
 recaptcha.clientIframeUrl=//www.google.com/recaptcha/api/noscript
