Introduced angular 1 for people search page and org chart functionality

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@
 /src/main/webapp/public/resources/themes/idm
 /src/main/webapp/public/resources/themes/mdefault
 /src/main/webapp/public/resources/themes/netiq
+/src/main/webapp/public/resources/app
