--- a/src/main/angular/package.json
+++ b/src/main/angular/package.json
@@ -41,6 +41,7 @@
     "node-sass": "3.10.1",
     "phantomjs": "2.1.7",
     "phantomjs-prebuilt": "2.1.13",
+    "postcss-loader": "1.0.0",
     "rimraf": "2.5.4",
     "sass-loader": "4.0.2",
     "style-loader": "0.13.1",
