--- a/src/main/angular/package.json
+++ b/src/main/angular/package.json
@@ -17,6 +17,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+  },
+  "devDependencies": {
     "@types/angular": "1.5.8",
     "@types/angular-mocks": "1.5.5",
     "@types/angular-ui-router": "1.1.34",
@@ -53,6 +55,5 @@
     "webpack-dev-server": "1.16.2",
     "webpack-merge": "0.14.1",
     "write-file-webpack-plugin": "3.3.0"
-  },
-  "devDependencies": {}
+  }
 }
