Reverted PWM port to 8080

--- a/src/main/angular/package.json
+++ b/src/main/angular/package.json
@@ -13,7 +13,7 @@
     "test": "karma start --NODE_ENV=test",
     "test-single-run": "karma start --NODE_ENV=test --singleRun --no-auto-watch",
     "start": "webpack-dev-server --config=webpack.dev.js --NODE_ENV=dev",
-    "sync": "concurrently \"webpack-dev-server --config=webpack.build.js --NODE_ENV=production\" \"cpx ./dist/*.js* ../webapp/public/resources/app -w -v\""
+    "sync": "concurrently \"webpack-dev-server --config=webpack.build.js --NODE_ENV=production\" \"cpx './dist/*.js*' ../webapp/public/resources/app --watch --verbose\""
   },
   "author": "",
   "license": "ISC",
