Command Line bugfixes and improvements

--- a/pom.xml
+++ b/pom.xml
@@ -574,6 +574,11 @@
             <artifactId>xodus-environment</artifactId>
             <version>1.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>1.7.21</version>
+        </dependency>
 
 
 
