--- a/pom.xml
+++ b/pom.xml
@@ -186,10 +186,10 @@
                             <outputDirectory>${project.basedir}/target/${project.artifactId}-${project.version}/public/resources/app</outputDirectory>
                             <resources>
                                 <resource>
-                                    <directory>src/main/angular/src</directory>
-                                    <excludes>
-                                        <exclude>**/*.ts</exclude>
-                                    </excludes>
+                                    <directory>src/main/angular/dist</directory>
+                                    <includes>
+                                        <include>*.ng.js*</include>
+                                    </includes>
                                 </resource>
                             </resources>
                         </configuration>
