--- a/pom.xml
+++ b/pom.xml
@@ -700,6 +700,11 @@
             <artifactId>angular-ui-router</artifactId>
             <version>1.0.0-beta.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>angular-translate</artifactId>
+            <version>2.13.0</version>
+        </dependency>
     </dependencies>
 
     <repositories>
