--- a/src/main/angular/package.json
+++ b/src/main/angular/package.json
@@ -23,11 +23,13 @@
   "devDependencies": {
     "@types/angular": "1.5.8",
     "@types/angular-mocks": "1.5.5",
+    "@types/angular-translate": "2.4.33",
     "@types/angular-ui-router": "1.1.34",
     "@types/jasmine": "2.5.35",
     "@types/node": "6.0.45",
     "angular": "1.5.8",
     "angular-mocks": "1.5.8",
+    "angular-translate": "2.13.0",
     "concurrently": "3.1.0",
     "copy-webpack-plugin": "3.0.1",
     "cpx": "1.5.0",
