--- a/src/main/angular/package.json
+++ b/src/main/angular/package.json
@@ -18,6 +18,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular-sanitize": "1.5.8",
+    "file-loader": "0.9.0",
     "url-loader": "0.5.7"
   },
   "devDependencies": {
