--- a/src/main/angular/package.json
+++ b/src/main/angular/package.json
@@ -18,9 +18,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "angular-sanitize": "1.5.8",
-    "file-loader": "0.9.0",
-    "url-loader": "0.5.7"
   },
   "devDependencies": {
     "@types/angular": "1.5.8",
@@ -31,9 +28,12 @@
     "@types/node": "6.0.45",
     "angular": "1.5.8",
     "angular-mocks": "1.5.8",
+    "angular-sanitize": "1.5.8",
     "angular-translate": "2.13.0",
+    "autoprefixer": "6.5.3",
     "copy-webpack-plugin": "3.0.1",
     "css-loader": "0.25.0",
+    "file-loader": "0.9.0",
     "html-loader": "0.4.4",
     "html-webpack-plugin": "2.22.0",
     "jasmine": "2.5.2",
@@ -57,6 +57,7 @@
     "tslint": "^3.15.1",
     "tslint-loader": "2.1.5",
     "typescript": "2.0.3",
+    "url-loader": "0.5.7",
     "webpack": "1.13.2",
     "webpack-dev-server": "1.16.2",
     "webpack-merge": "0.14.1",
