--- a/src/main/angular/package.json
+++ b/src/main/angular/package.json
@@ -17,8 +17,7 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/angular": "1.5.8",
     "@types/angular-mocks": "1.5.5",
@@ -34,6 +33,7 @@
     "copy-webpack-plugin": "3.0.1",
     "css-loader": "0.25.0",
     "file-loader": "0.9.0",
+    "fontgen-loader": "0.2.1",
     "html-loader": "0.4.4",
     "html-webpack-plugin": "2.22.0",
     "jasmine": "2.5.2",
