Production fonts have relative paths to peoplesearch.ng.js bundle.

--- a/src/main/angular/package.json
+++ b/src/main/angular/package.json
@@ -50,8 +50,10 @@
     "phantomjs": "2.1.7",
     "phantomjs-prebuilt": "2.1.13",
     "postcss-loader": "1.0.0",
+    "raw-loader": "0.5.1",
     "rimraf": "2.5.4",
     "sass-loader": "4.0.2",
+    "string-replace-loader": "1.0.5",
     "style-loader": "0.13.1",
     "ts-loader": "0.9.1",
     "tslint": "^3.15.1",
