--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <version>1.8.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
+    <name>PWM Password Self Service</name>
+
     <licenses>
         <license>
             <name>The GNU General Public License (GPL) Version 2</name>
@@ -40,6 +42,12 @@
             <id>notests</id>
             <properties>
                 <skipTests>true</skipTests>
+            </properties>
+        </profile>
+        <profile>
+            <id>nojavadocs</id>
+            <properties>
+                <maven.javadoc.skip>true</maven.javadoc.skip>
             </properties>
         </profile>
         <profile>
@@ -160,6 +168,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>2.17</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.puppycrawl.tools</groupId>
+                        <artifactId>checkstyle</artifactId>
+                        <version>7.2</version>
+                    </dependency>
+                </dependencies>
                 <executions>
                     <execution>
                         <id>validate</id>
