add link reference to peoplesearch detail view

--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -198,6 +198,7 @@ password.randomGenerator.jitter.count=50
 peoplesearch.displayName.enableAllMacros=false
 peoplesearch.values.verifyUserDN=true
 peoplesearch.values.maxCount=100
+peoplesearch.view.detail.links=
 queue.email.retryTimeoutMs=10000
 queue.email.maxAgeMs=86400000
 queue.email.maxCount=100000
