hide undesirable login error codes

--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -218,6 +218,7 @@ security.http.promiscuousEnable=false
 security.httpsServer.selfCert.futureSeconds=63113904
 security.httpsServer.selfCert.alg=RSA
 security.httpsServer.selfCert.keySize=2048
+security.login.hiddenErrorTypes=[5016]
 security.responses.hashIterations=100000
 security.input.trim=true
 security.input.password.trim=false
