--- a/pom.xml
+++ b/pom.xml
@@ -39,15 +39,44 @@
 
     <profiles>
         <profile>
-            <id>notests</id>
+            <id>skip-all</id>
+            <properties>
+                <maven.javadoc.skip>true</maven.javadoc.skip>
+                <source.skip>true</source.skip>
+                <jspc.skip>true</jspc.skip>
+                <skipTests>true</skipTests>
+                <checkstyle.skip>true</checkstyle.skip>
+                <skip.npm>true</skip.npm>
+            </properties>
+        </profile>
+        <profile>
+            <id>skip-tests</id>
             <properties>
                 <skipTests>true</skipTests>
             </properties>
         </profile>
         <profile>
-            <id>nojavadocs</id>
+            <id>skip-javadoc</id>
             <properties>
                 <maven.javadoc.skip>true</maven.javadoc.skip>
+            </properties>
+        </profile>
+        <profile>
+            <id>skip-checkstyle</id>
+            <properties>
+                <checkstyle.skip>true</checkstyle.skip>
+            </properties>
+        </profile>
+        <profile>
+            <id>skip-frontend</id>
+            <properties>
+                <skip.npm>true</skip.npm>
+            </properties>
+        </profile>
+        <profile>
+            <id>skip-jspc</id>
+            <properties>
+                <jspc.skip>true</jspc.skip>
             </properties>
         </profile>
         <profile>
@@ -86,15 +115,6 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>
-        <profile>
-            <!-- Disables source and javadoc jar file creation.  Handy when wanting to run quick development builds -->
-            <id>developer</id>
-            <properties>
-                <maven.javadoc.skip>true</maven.javadoc.skip>
-                <source.skip>true</source.skip>
-                <jspc.skip>true</jspc.skip>
-            </properties>
         </profile>
     </profiles>
 
@@ -597,7 +617,7 @@
         <dependency>
             <groupId>org.graylog2</groupId>
             <artifactId>syslog4j</artifactId>
-            <version>0.9.57</version>
+            <version>0.9.58</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
@@ -612,12 +632,12 @@
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-servlet</artifactId>
-            <version>2.24</version>
+            <version>2.25</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-json-jackson</artifactId>
-            <version>2.24</version>
+            <version>2.25</version>
         </dependency>
         <dependency>
             <groupId>org.jasig.cas.client</groupId>
@@ -632,12 +652,12 @@
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
-            <version>1.55</version>
+            <version>1.56</version>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcpkix-jdk15on</artifactId>
-            <version>1.55</version>
+            <version>1.56</version>
         </dependency>
         <dependency>
             <groupId>javax.xml</groupId>
@@ -662,7 +682,7 @@
         <dependency>
             <groupId>org.xeustechnologies</groupId>
             <artifactId>jcl-core</artifactId>
-            <version>2.7</version>
+            <version>2.8</version>
         </dependency>
         <dependency>
             <groupId>net.iharder</groupId>
@@ -687,7 +707,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-nop</artifactId>
-            <version>1.7.21</version>
+            <version>1.7.22</version>
         </dependency>
 
 
@@ -697,17 +717,17 @@
         <dependency>
             <groupId>org.webjars.bower</groupId>
             <artifactId>dojo</artifactId>
-            <version>1.11.2</version>
+            <version>1.12.1</version>
         </dependency>
         <dependency>
             <groupId>org.webjars.bower</groupId>
             <artifactId>dijit</artifactId>
-            <version>1.11.2</version>
+            <version>1.12.1</version>
         </dependency>
         <dependency>
             <groupId>org.webjars.bower</groupId>
             <artifactId>dojox</artifactId>
-            <version>1.11.2</version>
+            <version>1.12.1</version>
         </dependency>
         <dependency>
             <groupId>org.webjars.bower</groupId>
@@ -732,7 +752,7 @@
         <dependency>
             <groupId>org.webjars.npm</groupId>
             <artifactId>angular</artifactId>
-            <version>1.5.8</version>
+            <version>1.5.9</version>
         </dependency>
         <dependency>
             <groupId>org.webjars.npm</groupId>
