--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -76,11 +76,21 @@ helpdesk.verification.invalid.delayMs=2000
 helpdesk.verification.timeoutSeconds=3600
 http.resources.maxCacheItems=500
 http.resources.maxCacheBytes=500000
-http.resources.expirationSeconds=3600
+http.resources.expirationSeconds=86400
 http.resources.gzip.enable=true
 http.resources.pathNonceEnable=true
 http.resources.pathNoncePrefix=nonce-
-http.resources.webjarMappings={"/public/resources/dojo/dgrid/":"/webjars/dgrid/1.1.0/","/public/resources/dojo/dojo/":"/webjars/dojo/1.11.2/","/public/resources/dojo/dijit/":"/webjars/dijit/1.11.2/","/public/resources/dojo/dojox/":"/webjars/dojox/1.11.2/","/public/resources/font/font-awesome/":"/webjars/font-awesome/4.7.0/","/public/resources/flags/":"/webjars/famfamfam-flags/1.0.0/dist/","/public/resources/angular/":"/webjars/angular/1.5.8/","/public/resources/angular-ui-router/":"/webjars/angular-ui-router/1.0.0-beta.3/","/public/resources/angular-translate/":"/webjars/angular-translate/2.13.0/"}
+http.resources.webjarMappings={\
+  "/public/resources/dojo/dgrid/":"/webjars/dgrid/1.1.0/",\
+  "/public/resources/dojo/dojo/":"/webjars/dojo/1.12.1/",\
+  "/public/resources/dojo/dijit/":"/webjars/dijit/1.12.1/",\
+  "/public/resources/dojo/dojox/":"/webjars/dojox/1.12.1/",\
+  "/public/resources/font/font-awesome/":"/webjars/font-awesome/4.7.0/",\
+  "/public/resources/flags/":"/webjars/famfamfam-flags/1.0.0/dist/",\
+  "/public/resources/angular/":"/webjars/angular/1.5.9/",\
+  "/public/resources/angular-ui-router/":"/webjars/angular-ui-router/1.0.0-beta.3/",\
+  "/public/resources/angular-translate/":"/webjars/angular-translate/2.13.0/"\
+  }
 http.resources.zipFiles=[]
 http.gzip.enable=true
 http.errors.allowHtml=true
@@ -215,6 +225,7 @@ recaptcha.clientIframeUrl=//www.google.com/recaptcha/api/noscript
 recaptcha.validateUrl=https://www.google.com/recaptcha/api/siteverify
 security.html.stripInlineJavascript=false
 security.http.stripHeaderRegex=\\n|\\r|(?ism)%0A|%0D
+security.http.performCsrfHeaderChecks=false
 security.http.promiscuousEnable=false
 security.httpsServer.selfCert.futureSeconds=63113904
 security.httpsServer.selfCert.alg=RSA
@@ -233,7 +244,7 @@ security.sharedHistory.saltLength=64
 security.certs.validateTimestamps=false
 security.ldap.resolveCanonicalDN=true
 security.ldap.canonicalCacheSeconds=30
-security.defaultEphemeralBlockAlg=AES128_HMAC256
+security.defaultEphemeralBlockAlg=AES128_GCM
 security.defaultEphemeralHashAlg=SHA512
 security.config.minSecurityKeyLength=32
 seedlist.builtin.path=/WEB-INF/seedlist.zip
