report engine improvements

--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -109,7 +109,7 @@ http.header.sendXSessionID=true
 http.header.sendXVersion=false
 http.header.sendXContentTypeOptions=true
 http.header.sendXXSSProtection=true
-http.header.noise.length=1024
+http.header.noise.length=128
 http.header.csp.nonce.bytes=24
 http.cookie.default.secureFlag=auto
 http.cookie.theme.name=theme
@@ -164,7 +164,7 @@ ldap.search.paging.enable=auto
 ldap.search.paging.size=500
 localdb.aggressiveCompact.enabled=false
 localdb.implementation=password.pwm.util.localdb.Xodus_LocalDB
-localdb.initParameters=
+localdb.initParameters=00
 localdb.logWriter.bufferSize=500
 localdb.logWriter.maxBufferWaitMs=60000
 localdb.logWriter.maxTrimSize=5001
@@ -220,6 +220,7 @@ queue.syslog.retryTimeoutMs=30000
 queue.syslog.maxAgeMs=86400000
 queue.syslog.maxCount=100000
 reporting.ldap.searchTimeoutMs=1800000
+reporting.ldap.searchThreads=8
 recaptcha.clientJsUrl=//www.google.com/recaptcha/api.js
 recaptcha.clientIframeUrl=//www.google.com/recaptcha/api/noscript
 recaptcha.validateUrl=https://www.google.com/recaptcha/api/siteverify
