--- a/pom.xml
+++ b/pom.xml
@@ -607,7 +607,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.2</version>
+            <version>4.5.3</version>
         </dependency>
         <dependency>
             <groupId>com.googlecode.concurrentlinkedhashmap</groupId>
@@ -632,12 +632,12 @@
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-servlet</artifactId>
-            <version>2.26-b01</version>
+            <version>2.26-b02</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-json-jackson</artifactId>
-            <version>2.26-b01</version>
+            <version>2.26-b02</version>
         </dependency>
         <dependency>
             <groupId>org.jasig.cas.client</groupId>
@@ -709,6 +709,11 @@
             <artifactId>slf4j-nop</artifactId>
             <version>1.7.22</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>webjars-locator-core</artifactId>
+            <version>0.32</version>
+        </dependency>
 
 
 
@@ -752,7 +757,7 @@
         <dependency>
             <groupId>org.webjars.npm</groupId>
             <artifactId>angular</artifactId>
-            <version>1.5.11</version>
+            <version>1.6.2</version>
         </dependency>
         <dependency>
             <groupId>org.webjars.npm</groupId>
