parallel user searching for multiple contexts/ldap profiles

--- a/pom.xml
+++ b/pom.xml
@@ -515,6 +515,14 @@
     </reporting>
 
     <dependencies>
+        <!-- dev tool -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.14</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- Test dependencies -->
         <dependency>
             <groupId>junit</groupId>
