cache improvements and pw expiry svc stub

--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -35,7 +35,7 @@ backup.path=backup
 backup.config.count=20
 backup.localdb.count=10
 cache.enable=true
-cache.memory.maxItems=100
+cache.memory.maxItems=1000
 cache.pwRuleCheckLifetimeMS=30000
 cache.uniqueFormValueLifetimeMS=30000
 client.ajax.activityMaxEpsRate=100
@@ -138,12 +138,16 @@ intruder.minimumDelayPenaltyMS=300
 intruder.maximumDelayPenaltyMS=3000
 intruder.delayPerCountMS=200
 intruder.delayMaxJitterMS=2000
+ldap.resolveCanonicalDN=true
+ldap.cache.canonical.enable=true
+ldap.cache.canonical.seconds=60
+ldap.cache.userGuid.enable=true
+ldap.cache.userGuid.seconds=3600
 ldap.chaiSettings=
 ldap.extensions.nmas.enable=true
 ldap.connection.timeoutMS=30000
 ldap.profile.retryDelayMS=30000
 ldap.promiscuousEnable=false
-ldap.search.timeoutMS=30000
 ldap.password.replicaCheck.initialDelayMS=1000
 ldap.password.replicaCheck.cycleDelayMS=7000
 ldap.password.change.self.enable=true
@@ -233,8 +237,6 @@ security.sharedHistory.hashName=SHA-512
 security.sharedHistory.caseInsensitive=true
 security.sharedHistory.saltLength=64
 security.certs.validateTimestamps=false
-security.ldap.resolveCanonicalDN=true
-security.ldap.canonicalCacheSeconds=600
 security.defaultEphemeralBlockAlg=AES128_GCM
 security.defaultEphemeralHashAlg=SHA512
 security.config.minSecurityKeyLength=32
