--- a/pom.xml
+++ b/pom.xml
@@ -231,6 +231,21 @@
                         </configuration>
                     </execution>
                     <execution>
+                        <id>stage-angular</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.basedir}/target/angular</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>src/main/angular</directory>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                    <execution>
                         <id>copy-angular-resources</id>
                         <phase>prepare-package</phase>
                         <goals>
@@ -240,7 +255,7 @@
                             <outputDirectory>${project.basedir}/target/${project.artifactId}-${project.version}/public/resources/app</outputDirectory>
                             <resources>
                                 <resource>
-                                    <directory>src/main/angular/dist</directory>
+                                    <directory>${project.basedir}/target/angular/dist</directory>
                                 </resource>
                             </resources>
                         </configuration>
@@ -293,13 +308,6 @@
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
                 <version>3.0.0</version>
-                <configuration>
-                    <filesets>
-                        <fileset><directory>src/main/angular/dist</directory></fileset>
-                        <fileset><directory>src/main/angular/node_modules</directory></fileset>
-                        <fileset><directory>src/main/webapp/public/resources/app</directory></fileset>
-                    </filesets>
-                </configuration>
                 <executions>
                     <execution>
                         <id>remove-compiled-jsps</id>
@@ -435,7 +443,7 @@
                     <nodeVersion>v6.6.0</nodeVersion>
                     <npmVersion>3.10.8</npmVersion>
                     <installDirectory>target</installDirectory>
-                    <workingDirectory>${basedir}/src/main/angular</workingDirectory>
+                    <workingDirectory>${basedir}/target/angular</workingDirectory>
                 </configuration>
                 <executions>
                     <!-- install node & npm -->
@@ -624,11 +632,6 @@
             <version>4.5.3</version>
         </dependency>
         <dependency>
-            <groupId>com.googlecode.concurrentlinkedhashmap</groupId>
-            <artifactId>concurrentlinkedhashmap-lru</artifactId>
-            <version>1.4.2</version>
-        </dependency>
-        <dependency>
             <groupId>org.graylog2</groupId>
             <artifactId>syslog4j</artifactId>
             <version>0.9.58</version>
@@ -727,6 +730,11 @@
             <groupId>org.webjars</groupId>
             <artifactId>webjars-locator-core</artifactId>
             <version>0.32</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>2.4.0</version>
         </dependency>
 
 
