refs #2382 ADD FuzzyMatch. Config UI missing.

--- a/pom.xml
+++ b/pom.xml
@@ -594,6 +594,14 @@
             <version>2013.04.26</version>
         </dependency>
         <!-- / Novell jars (not available from a maven repo) -->
+        
+        <!-- Other jars (not available from a maven repo)  -->
+		<dependency>
+		    <groupId>gcardone</groupId>
+		    <artifactId>gcardone.junidecode</artifactId>
+		    <version>0.2</version>
+		</dependency>
+        <!-- / Other jars (not available from a maven repo)  -->
 
         <dependency>
             <groupId>com.github.ldapchai</groupId>
