ondemand user-info

--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -139,6 +139,7 @@ http.parameter.oauth.grantType=grant_type
 http.download.buffer.size=102400
 http.session.recycleAtAuth=true
 http.session.validationKeyLength=32
+http.servlet.enablePostRedirectGet=true
 intruder.retentionTimeMS=86400000
 intruder.cleanupFrequencyMS=3603000
 intruder.minimumDelayPenaltyMS=300
@@ -218,6 +219,7 @@ peoplesearch.view.detail.links=
 queue.email.retryTimeoutMs=10000
 queue.email.maxAgeMs=86400000
 queue.email.maxCount=100000
+queue.email.maxThreads=-1
 queue.sms.retryTimeoutMs=10000
 queue.sms.maxAgeMs=86400000
 queue.sms.maxCount=100000
