database thread correctness and pooling

--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -62,6 +62,9 @@ configGuide.idleTimeoutSeconds=3600
 configManager.zipDebug.maxLogLines=100000
 configManager.zipDebug.maxLogSeconds=30
 db.jdbcLoadStrategy=AppPathFileLoader,Classpath
+db.connections.max=5
+db.connections.timeoutMs=30000
+db.connections.watchdogFrequencySeconds=30
 download.filename.statistics.csv=Statistics.csv
 download.filename.reportSummary.csv=UserReportSummary.csv
 download.filename.reportRecords.csv=UserReportRecords.csv
@@ -172,7 +175,7 @@ ldap.search.parallel.threadMax=50
 ldap.oracle.postTempPasswordUseCurrentTime=false
 localdb.aggressiveCompact.enabled=false
 localdb.implementation=password.pwm.util.localdb.Xodus_LocalDB
-localdb.initParameters=00
+localdb.initParameters=
 localdb.logWriter.bufferSize=500
 localdb.logWriter.maxBufferWaitMs=60000
 localdb.logWriter.maxTrimSize=5001
