--- a/pom.xml
+++ b/pom.xml
@@ -173,45 +173,16 @@
 									<token><![CDATA[ End CAS Config -->]]></token>
 									<value><![CDATA[<!--    End CAS Config -->]]></value>
 								</replacement>
+                                <replacement>
+                                    <token><![CDATA[<!- cas-config-web.xml start ->]]></token>
+                                    <value><![CDATA[<!-- cas-config-web.xml start -->]]></value>
+                                </replacement>
+                                <replacement>
+                                    <token><![CDATA[<!- cas-config-web.xml end ->]]></token>
+                                    <value><![CDATA[<!-- cas-config-web.xml end -->]]></value>
+                                </replacement>
 							</replacements>
 						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>cas-fileconfig</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>com.google.code.maven-replacer-plugin</groupId>
-						<artifactId>maven-replacer-plugin</artifactId>
-						<version>1.3.5</version>
-						<executions>
-							<execution>
-								<id>replace-webxml-config</id>
-								<phase>prepare-package</phase>
-								<goals>
-									<goal>replace</goal>
-								</goals>
-								<configuration>
-									<includes>
-										<include>src/main/webapp/WEB-INF/web.xml</include>
-									</includes>
-									<replacements>
-										<replacement>
-                                            <token><![CDATA[<!-- cas-config-web.xml start -->]]></token>
-											<value><![CDATA[<!-- cas-config-web.xml start ]]></value>
-										</replacement>
-										<replacement>
-                                            <token><![CDATA[<!-- cas-config-web.xml end -->]]></token>
-											<value><![CDATA[ cas-config-web.xml end -->]]></value>
-										</replacement>
-
-									</replacements>
-								</configuration>
-							</execution>
-						</executions>
 					</plugin>
 				</plugins>
 			</build>
