--- a/src/main/angular/package.json
+++ b/src/main/angular/package.json
@@ -25,6 +25,7 @@
     "@types/angular-ui-router": "1.1.34",
     "@types/jasmine": "2.5.35",
     "@types/node": "6.0.45",
+    "@uirouter/angularjs": "1.0.5",
     "angular": "1.5.8",
     "angular-mocks": "1.5.8",
     "angular-translate": "2.13.0",
@@ -57,7 +58,7 @@
     "ts-loader": "0.9.1",
     "tslint": "^3.15.1",
     "tslint-loader": "2.1.5",
-    "typescript": "2.0.3",
+    "typescript": "2.3.4",
     "url-loader": "0.5.7",
     "webpack": "1.13.2",
     "webpack-dev-server": "1.16.2",
