--- a/src/main/resources/password/pwm/PwmConstants.properties
+++ b/src/main/resources/password/pwm/PwmConstants.properties
@@ -45,4 +45,4 @@ enableEulaDisplay=false
 databaseAccessor.keyLength=128
 missingVersionString=[Version Missing]
 applicationPathInfoFile=applicationPath.properties
-includedLocales=["","cs","de","el","es","fi","fr","hu","it","iw","ja","ko","nl","nn","no","pl","pt","pt_BR","sk","sv","th","tr","zh","zh_TW"]
+includedLocales=["","en_CA","ca","cs","da","de","el","es","fi","fr","fr_CA","hu","it","iw","ja","ko","nl","nn","no","pl","pt","pt_BR","sk","sv","th","tr","zh_CN","zh_TW"]
