add app property for control of token choice page

--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -271,6 +271,7 @@ telemetry.minimumAuthentications=10
 token.cleaner.intervalSeconds=3605
 token.mask.email.regex=(?<=.).(?=[^@]*?@)|(?:(?<=@.)|(?!^)\\G(?=[^@]*$)).(?=.*\\.)
 token.mask.email.replace=*
+token.mask.showSelection=true
 token.mask.sms.regex=\\d(?!.{0,3}$)
 token.mask.sms.replace=*
 token.maxUniqueCreateAttempts=100
