Disabled security checks for .NET assemblies, since we were getting the following error messages:
[ERROR] Failed to execute goal org.owasp:dependency-check-maven:1.4.5:check (default-cli) on project pwm: One or more exceptions occurred during dependency-check analysis: One or more exceptions occurred
during dependency-check analysis
[ERROR] An error occurred with the .NET AssemblyAnalyzer

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -470,6 +470,10 @@
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
                 <version>1.4.5</version>
+                <configuration>
+                    <nuspecAnalyzerEnabled>false</nuspecAnalyzerEnabled>
+                    <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
